environments/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
   - host: dev.platform-backend.136.119.144.166.sslip.io
     http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: platform-backend-dev
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: platform-frontend-dev
              port:
                number: 80
